tests/paczka1/small_fuzzy/94385588.err
Error in line 7: ChcFhZDWN A799 15,3
Error in line 9: 6A9c3BrRZN S31 98,0
